--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>web developer portfolio</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <h3>Mary</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button>Hire Me</button></a></li>
+            </ul>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
