--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web developer portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Styles/portfolio.css">
 </head>
-<body>
+<body class="open-sans-normal">
     <header>
         <nav>
-            <h3>Mary</h3>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
