--- a/index.html
+++ b/index.html
@@ -10,15 +10,25 @@
     <link rel="stylesheet" href="Styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href=""><button>Hire Me</button></a></li>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-parimary">Hire Me</button></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greetings dark-2">Hi, I am</h3>
+                <h1 class="banner-content">Saleh Ahmad</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-parimary">Download CV</button>
+                <button class="btn-parimary">Contact</button>
+            </div>
+            <img class="banner-portfolio-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main></main>
     <footer></footer>
