--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -30,7 +30,32 @@
             <img class="banner-portfolio-pic" src="images/hardy.png" alt="">
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="about secondary-bgg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                <!-- .about-item*4>p.item-title+p.item-description -->
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Saleh Ahmad</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">E-mail</p>
+                    <p class="item-description">info@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth</p>
+                    <p class="item-description">19 Sep 1992</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Amsterdam,Netherlands</p>
+                </div>
+
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
