--- a/index.html
+++ b/index.html
@@ -141,6 +141,25 @@
             
         </section>
     </main>
-    <footer></footer>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">Let's connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your name">
+                <input type="email" name="" id="" placeholder="Your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="your message"></textarea>
+                <input class="btn-parimary" type="submit" value="submit">
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
